generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// -------------------------------------------------------
// Enums
// -------------------------------------------------------

enum RoleEntityType {
  HUB
  COMMUNITY
}

enum CommentEntityType {
  ANNOUNCEMENT
  EVENT
}

enum HubType {
  REGISTERED
  AGGLOMERATE
}

enum ReleaseStatus {
  DRAFT
  PENDING
  HIDDEN
  PUBLIC
  ARCHIVED
}

enum EventType {
  SOCIAL
  INFORMATIONAL
}

enum RecurrenceSchedule {
  DAILY
  WEEKLY
  BIWEEKLY
  MONTHLY
  ANNUAL
}

enum Day {
  MON
  TUE
  WED
  THU
  FRI
  SAT
  SUN
}

enum CommentStatus {
  PENDING
  APPROVED
  REJECTED
  HIDDEN
  LOCKED
}

enum CommunicationFrequency {
  NEVER
  REALTIME
  DAILY
  WEEKLY
  BIWEEKLY
  MONTHLY
}

enum CommunicationMethod {
  EMAIL
  SMS
}

enum RSVPStatus {
  GOING
  INTERESTED
  NOT_GOING
}

// -------------------------------------------------------
// Users & RBAC
// -------------------------------------------------------

model User {
  id              String    @id @default(cuid())
  username        String    @unique
  email           String    @unique
  phone           String?
  emailVerifiedAt DateTime?
  phoneVerifiedAt DateTime?
  firstname       String?
  lastname        String?
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt
  lastloginAt     DateTime?
  settings        Json?

  // Auth fields (added for in-house auth)
  passwordHash             String?
  emailVerificationToken   String?  @unique

  userRoles             UserRole[]
  createdRoles          Role[]
  createdHubs           Hub[]
  createdCommunities    Community[]
  createdEvents         Event[]
  authoredAnnouncements Announcement[]
  comments              Comment[]
  subscriptions         Subscription[]
  userEvents            UserEvent[]
  sessions              Session[]

  @@index([email])
  @@index([username])
  @@index([lastloginAt], map: "lastlogin_index")
}

model UserRole {
  userId     String
  user       User           @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  entityType RoleEntityType
  entityId   String         // polymorphic — no FK; references hub.id or community.id
  roleId     Int
  role       Role           @relation(fields: [roleId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  // DB-level CHECK: entity_type IN ('HUB', 'COMMUNITY') — add in migration
  @@id([userId, entityId])
  @@index([entityType, entityId], map: "idx_user_role_entity")
}

model Role {
  id          Int             @id @default(autoincrement())
  name        String
  description String?         @db.Text
  isDefault   Boolean
  entityId    String?         // NULL for default roles; cuid of hub/community for custom roles
  entityType  RoleEntityType?
  creatorId   String?
  creator     User?           @relation(fields: [creatorId], references: [id], onDelete: SetNull, onUpdate: Cascade)

  // DB-level CHECK: is_default = (entity_id IS NULL) — add in migration
  userRoles       UserRole[]
  rolePermissions RolePermission[]
}

model RolePermission {
  roleId       Int
  role         Role       @relation(fields: [roleId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  permissionId Int
  permission   Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  @@id([roleId, permissionId])
}

model Permission {
  id          Int    @id @default(autoincrement())
  name        String
  description String?

  rolePermissions RolePermission[]
}

// -------------------------------------------------------
// Hubs & Communities
// -------------------------------------------------------

model Hub {
  id          String   @id @default(cuid())
  type        HubType
  name        String
  description String   @db.Text
  creatorId   String?
  creator     User?    @relation(fields: [creatorId], references: [id], onDelete: SetNull, onUpdate: Cascade)
  address     String?
  latitude    Float?
  longitude   Float?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  // DB-level CHECK: latitude BETWEEN -90 AND 90 — add in migration
  // DB-level CHECK: longitude BETWEEN -180 AND 180 — add in migration
  hubCommunities HubCommunity[]
}

model HubCommunity {
  hubId       String
  hub         Hub       @relation(fields: [hubId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  communityId String
  community   Community @relation(fields: [communityId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  @@id([hubId, communityId])
}

model Community {
  id                 String   @id @default(cuid())
  name               String
  website            String?
  description        String   @db.Text
  tags               String[]
  contactFirstname   String
  contactLastname    String
  contactEmail       String
  contactNumber      String?
  address            String
  city               String
  province           String
  postalCode         String?
  country            String
  settings           Json?
  creatorId          String?
  creator            User?    @relation(fields: [creatorId], references: [id], onDelete: SetNull, onUpdate: Cascade)
  verifiedEmail      Boolean  @default(false)
  verifiedExternally Boolean  @default(false)
  createdAt          DateTime @default(now())
  updatedAt          DateTime @updatedAt

  hubCommunities HubCommunity[]
  events         Event[]
  announcements  Announcement[]
  comments       Comment[]
  subscriptions  Subscription[]

  @@index([city, province], map: "idx_community_location")
}

// -------------------------------------------------------
// Community / Public Facing
// -------------------------------------------------------

model Event {
  id             String              @id @default(cuid())
  communityId    String
  community      Community           @relation(fields: [communityId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  creatorId      String?
  creator        User?               @relation(fields: [creatorId], references: [id], onDelete: SetNull, onUpdate: Cascade)
  announcementId String?
  announcement   Announcement?       @relation(fields: [announcementId], references: [id], onDelete: SetNull, onUpdate: Cascade)
  releaseStatus  ReleaseStatus
  eventType      EventType?
  title          String
  subtitle       String?
  description    String?             @db.Text
  links          String[]
  tags           String[]
  location       String?
  startsAt       DateTime?
  endsAt         DateTime?
  icalUrl        String?
  recurring      RecurrenceSchedule?
  recurringDow   Day[]
  createdAt      DateTime            @default(now())
  releasedAt     DateTime?
  updatedAt      DateTime            @updatedAt

  // DB-level CHECK: ends_at IS NULL OR ends_at > starts_at — add in migration
  userEvents UserEvent[]

  @@index([communityId, releaseStatus, startsAt], map: "idx_event_community_feed")
  @@index([recurring], map: "idx_event_recurring")
}

model Announcement {
  id            String        @id @default(cuid())
  communityId   String
  community     Community     @relation(fields: [communityId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  authorId      String?
  author        User?         @relation(fields: [authorId], references: [id], onDelete: SetNull, onUpdate: Cascade)
  releaseStatus ReleaseStatus
  title         String
  subtitle      String?
  description   String?       @db.Text
  tags          String[]
  createdAt     DateTime      @default(now())
  releasedAt    DateTime?
  updatedAt     DateTime      @updatedAt
  likes         Int?
  views         Int?

  events Event[]

  @@index([communityId, releaseStatus, releasedAt], map: "idx_announcement_community_feed")
}

model Comment {
  id               Int               @id @default(autoincrement())
  communityId      String
  community        Community         @relation(fields: [communityId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  authorId         String?
  author           User?             @relation(fields: [authorId], references: [id], onDelete: SetNull, onUpdate: Cascade)
  commentStatus    CommentStatus
  content          String            @db.Text
  ts               DateTime          @default(now())
  tsEdited         DateTime?
  parentEntityType CommentEntityType
  parentEntityId   String            // polymorphic — no FK; references announcement.id or event.id
  parentCommentId  Int?
  parentComment    Comment?          @relation("CommentThread", fields: [parentCommentId], references: [id], onDelete: SetNull, onUpdate: Cascade)
  childComments    Comment[]         @relation("CommentThread")

  // DB-level CHECK: parent_entity_type IN ('ANNOUNCEMENT', 'EVENT') — add in migration
  @@index([parentEntityType, parentEntityId], map: "idx_comments_parent")
  @@index([parentCommentId], map: "idx_comments_thread")
}

// -------------------------------------------------------
// User Facing
// -------------------------------------------------------

model Subscription {
  id                        Int                     @id @default(autoincrement())
  userId                    String
  user                      User                    @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  communityId               String
  community                 Community               @relation(fields: [communityId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  isActive                  Boolean
  tsSubscribed              DateTime                @default(now())
  tsUnsubscribed            DateTime?
  calendarFreq              CommunicationFrequency?
  calendarPreferredTime     String?                 // stored as "HH:MM"
  calendarChannels          CommunicationMethod[]
  announcementFreq          CommunicationFrequency?
  announcementPreferredTime String?                 // stored as "HH:MM"
  announcementChannels      CommunicationMethod[]

  // DB-level CHECK: is_active OR ts_unsubscribed IS NOT NULL — add in migration
  @@unique([userId, communityId])
  @@index([communityId, isActive], map: "idx_subscription_community")
}

model UserEvent {
  id         Int        @id @default(autoincrement())
  userId     String
  user       User       @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  eventId    String
  event      Event      @relation(fields: [eventId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  rsvpStatus RSVPStatus

  @@index([eventId, rsvpStatus], map: "idx_user_events_event")
}

// -------------------------------------------------------
// Auth
// -------------------------------------------------------

model Session {
  id           String   @id @default(cuid())
  userId       String
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  refreshToken String   @unique  // stores SHA-256 hash of the raw refresh JWT
  expiresAt    DateTime
  createdAt    DateTime @default(now())

  @@index([userId])
  @@map("sessions")
}

// -------------------------------------------------------
// Job Queue
// -------------------------------------------------------

enum JobStatus {
  SCHEDULED
  PENDING
  READY
  RUNNING
  COMPLETE
  FAILED
}

model JobQueue {
  id           String    @id @default(cuid())
  status       JobStatus @default(SCHEDULED)
  serviceName  String
  createdAt    DateTime  @default(now())
  fireAt       DateTime
  startedAt    DateTime?
  completedAt  DateTime?
  payload      Json
  maxRetries   Int       @default(3)
  retryCount   Int       @default(0)
  errorMessage String?

  @@index([status, fireAt])
  @@map("job_queue")
}
